Attempt to fix input lag on iphone

--- a/contrast-theme-blue.css
+++ b/contrast-theme-blue.css
@@ -1,19 +1,25 @@
-.contrast-toggle-selected--noMatch {
+/* .contrast-toggle-selected--noMatch { */
   /* background: linear-gradient( 90deg, #787C7E 50%, red 50% );  */
-  border-width: 5px;
+  /* border-width: 5px;
   border-style: double;
   border-color: black;
-}
+} */
 
-.contrast-toggle-selected--match {
+/* .contrast-toggle-selected--match { */
   /* background: linear-gradient( 90deg, #f5793a 50%, red 50% );  */
-  border-width: 5px;
+  /* border-width: 5px;
   border-style: double;
   border-color: black;
-}
+} */
 
-.contrast-toggle-selected--exactMatch {
+/* .contrast-toggle-selected--exactMatch { */
   /* background: linear-gradient(90deg, #85c0f9 50%, red 50% );  */
+  /* border-width: 5px;
+  border-style: double;
+  border-color: black;
+} */
+
+.contrast-toggle--keySelected {
   border-width: 5px;
   border-style: double;
   border-color: black;
